--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@angular/cli": "^8.3.19",
     "@vue/cli": "^4.0.5",
     "create-react-app": "^3.2.0"
   },
