--- a/angular/package.json
+++ b/angular/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:client-and-server-bundles": "ng build --prod && ng run Minimus:server:production",
+    "build:client-and-server-bundles": "ng build --prod && ng run Minimus:server:production --bundleDependencies all",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "serve:ssr": "node dist/server"
@@ -28,7 +28,10 @@
     "@angular/router": "~8.1.1",
     "@angular/service-worker": "~8.1.1",
     "@ngui/auto-complete": "^2.0.0",
+    "@nguniversal/express-engine": "8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "angularfire-lite": "^6.0.3",
+    "express": "^4.15.2",
     "firebase": "^5.9.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
