--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@angular/cli": "^8.3.19",
     "@vue/cli": "^4.0.5",
+    "create-next-app": "^9.1.3",
     "create-react-app": "^3.2.0"
   },
   "scripts": {
