--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@angular/cli": "^8.3.19",
     "@vue/cli": "^4.0.5",
     "create-next-app": "^9.1.3",
+    "create-nuxt-app": "^2.11.1",
     "create-react-app": "^3.2.0"
   },
   "scripts": {
